# sota-summarizers

./: pyproject.toml  readme.md  runner.sh  summarize.py
articles/: one-meta.md  one.txt  three-meta.md  three.txt  two-meta.md  two.txt
results/: analysisis_11-16-21.xlsx  runner_results11-16-21.csv
