[tool.poetry]
name = "Neural SOTA Summarizing Model Selection"
version = "0.1.0"
description = "A small project to try, evaluate, and select a SOTA model for my personal use."
authors = ["Ivan Perez <dev@ivanperez.pe>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = {extras = ["torch"], version = "^4.11.3"}
sentencepiece = "^0.1.96"
datasets = "^1.15.1"
nltk = "^3.6.5"
rouge-score = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
